samples/_failures_safe/1761331195_b49b7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff1c8955.c: In function ‘main’:
./samples/SAFE/__tmp_ff1c8955.c:176:13: error: expected declaration or statement at end of input
  176 |             }
      |             ^
./samples/SAFE/__tmp_ff1c8955.c:176:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff1c8955.c:176:13: error: expected declaration or statement at end of input
